--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hiteshJain, PrathmeshIngole, SarangShelke, ShubhamHIpppargi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chartjs-plugin-datalabels": "^2.2.0"
+  }
 }
